--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#fff</color>
+    <color name="colorPrimaryDark">#b3b3b3</color>
+    <color name="colorAccent">#FF4081</color>
     <color name="red">#e22b2b</color>
 </resources>
